--- a/public/css/dashboard_css/bootstrap-reset.css
+++ b/public/css/dashboard_css/bootstrap-reset.css
@@ -118,9 +118,8 @@ a:hover {
 /*text input*/
 
 .form-control {
-    border: 1px solid #e2e2e4;
-    box-shadow: none;
-    color: #c2c2c2;
+
+    background-color: #e6e6e673;
 }
 
 
